--- a/environments/acc/configmap/logstash/pipelines/logstash.conf
+++ b/environments/acc/configmap/logstash/pipelines/logstash.conf
@@ -1,13 +1,13 @@
 input {
   beats {
-    port => 5044
+    port => "5044"
   }
 }
 
 output {
-  stdout {}
+  # stdout { codec => rubydebug }
   elasticsearch {
-    hosts => "http://elasticsearch-service:9200"
+    hosts => "elasticsearch-service:9200"
     index => "filebeat-test-%{+YYYY.MM.dd}"
   }
 }
